--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           sans-serif;
       "
     >
-      1000 things I wanted to be
+      1000 things I wanted to be...
     </h1>
     <div>
       <h2
