--- a/index.html
+++ b/index.html
@@ -1,2 +1,67 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html>
+    <head>
+        <title>Chcemy być domni</title>
+        <meta name="author" content="amk">
+        <meta name="description" content="Poradnik, który tworzę w trakcie kupowania pierwszego mieszkania.">
+    </head>
+    <body>
+    <header>
+        <h1>Chcemy być domni</h1>
+    </header>
+    <nav>
+        <button><a href="#">Strona główna</a></button>
+        <button><a href="#sprawy-koncepcyjne">Sprawy koncepcyjne</a></button>
+        <button><a href="#sprawy-papierkowe">Sprawy papierkowe</a></button>
+        <button><a href="#sprawy-projektowe">Sprawy projektowe</a></button>
+        <button><a href="#sprawy-budowlane">Sprawy budowlane</a></button>
+    </nav>
+        <h2>Wlasne mieszkanie: fajne, ale nie proste</h2>
+        <p>Lubisz mieć dach nad głową? Jasne,to dość popularne hobby. Jeśli chcesz opuścić grono wierzących niepraktykujących i w końcu przenieść się na swoje - może nie być lekko. A czy warto? Jeszcze nie wiem, zobaczymy.</p>
+        <h3>O mnie</h3>
+        <p>Kim jestem? Mam 30 lat, od niedawna kredyt i mieszkanie. Jakie mam kwalifikacja, żeby doradzać w kwestiach mieszkaniowych? Żadne – poza doświadczeniem z pierwszej ręki i nauką na wlasnych błędach.</p>
+        <section id="sprawy-koncepcyjne">
+            <h2>Sprawy koncepcyjne</h2>
+            <p>Co tutaj będzie?</p>
+            <p>Zanim zaczniesz robić,pomyśl. Dlaczego chcesz kupic? Może lepiej wynająć? Masz kasę? Itd.<br>Rozeznanie dzielnic, wielkości,cen ,dwweloperow,idz na drzwi otwarte. Zdecyduj ,czy wtórny,czy pierwotnyrynek.</p>
+        </section>
+        <section id="sprawy-papierkowe">
+            <h2>Sprawy papierkowe</h2>
+            <p>Co tu będzie?</p>
+            <p>Najpierw deweloperem - czy to osobno? Potem umowa rezerwacji, kredytowe wnioski, potem podatki,zgloszenia,wpisy do KW.<br><hr>A moze zmienic koncepcjęi zamoast na tematy podzielićna etapy? Przed decyzja,w trakcie, kupno, załatwienie mediow,wykonczenie ,sasiedzi itd.</p>
+        </section>
+        <section id="sprawy-projektowe">
+            <h2>Sprawy projektowe</h2>
+            <p>Co tu będzie?</p>
+            <p>Czy chxesz architekta? Nie musisz,da sie. Ale fajne sąuslugi sprawdzenia projektu. Jesli masz dobregofahowaca, to mozesz bez archivutwkta. Jesli nie masz dobrego fa howca,to lepiej moec architekta. Faktury, umowy itd.</p>
+            <p>Nie trendy ,ale to jak żyjeszna co dzien. Co Cie denerwuje? Jakie masz plany?</p>
+        </section>
+        <section id="sprawy-budowlane">
+            <h2>Sprawy budowlane</h2>
+            <p>Co tu będzie?</p>
+            <p>Chlopie, ja nie wiem</p>
+            <ol>
+                <li>najpierw to, co niezbędnedo wprowadzenia się</li>
+                <ul>
+                    <li>ściany, podlogi, sufity</li>
+                    <li>instalacje (elektryka,hydraulika)</li>
+                    <li>kuchnia</li>
+                    <li>łazienka</li>
+                    <li>materac</li>
+                    <li>pralka?</li>
+                </ul>
+                <li>potem to, co przydatne</li>
+                <ul>
+                    <li>łóżko</li>
+                    <li>biuro</li>
+                </ul>
+                <li>na końcu dodatki</li>
+                <ul>
+                    <li>meble (sincerely, jebax meble)</li>
+                    <li>balkon</li>
+                    <li>dywany</li>
+                </ul>
+            </ol>
+        </section>
+    </body>
+</html>
