basic styles.css and fonts thatI hate

--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
   <head>
     <title>MieszkAnka</title>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- paragraph font -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    />
+    <!-- h1-h6 font -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <meta
       name="description"
       content="Poradnik, który tworzę w trakcie kupowania pierwszego mieszkania."
@@ -21,7 +35,7 @@
       <button><a href="#sprawy-budowlane">Sprawy budowlane</a></button>
     </nav>
     <hr />
-    <h2>Wlasne mieszkanie: fajne, ale nie proste</h2>
+    <h2>Własne mieszkanie: fajne, ale nie proste</h2>
     <p>
       Lubisz mieć dach nad głową? Jasne, to dość popularne hobby. Wszyscy chcemy
       być domni. Jeśli Ty też planujesz opuścić grono wierzących
