minor text changes

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     <h2>Własne mieszkanie: fajne, ale nie proste</h2>
     <p>
       Lubisz mieć dach nad głową? Jasne, to dość popularne hobby. Wszyscy chcemy
-      być domni. Jeśli Ty też planujesz opuścić grono wierzących
-      niepraktykujących i w końcu przenieść się na swoje - może nie być lekko. A
-      czy warto? Jeszcze nie wiem, zobaczymy.
+      być domni. Jeśli planujesz opuścić grono wierzących niepraktykujących i w
+      końcu przenieść się na swoje - może nie być lekko. A czy warto? Jeszcze
+      nie wiem, zobaczymy.
     </p>
     <h3>O mnie</h3>
     <p>
       Kim jestem? Mam 30 lat, od niedawna kredyt i mieszkanie. Jakie mam
-      kwalifikacja, żeby doradzać w kwestiach mieszkaniowych? Żadne – poza
+      kwalifikacje, żeby doradzać w kwestiach mieszkaniowych? Żadne – poza
       doświadczeniem z pierwszej ręki i nauką na wlasnych błędach.
     </p>
     <section id="sprawy-koncepcyjne">
@@ -53,10 +53,13 @@
       <h2>Sprawy koncepcyjne</h2>
       <p>Co tutaj będzie?</p>
       <p>
-        Zanim zaczniesz robić,pomyśl. Dlaczego chcesz kupic? Może lepiej
-        wynająć? Masz kasę? Itd.<br />Rozeznanie dzielnic, wielkości,cen
-        ,dwweloperow,idz na drzwi otwarte. Zdecyduj ,czy wtórny,czy
-        pierwotnyrynek.
+        Zanim zaczniesz robić, pomyśl. Dlaczego chcesz kupic? Może lepiej
+        wynająć? Masz kasę? Itd.
+      </p>
+      <p>
+        Rozeznanie dzielnic, wielkości, cen, deweloperow, idź na drzwi otwarte.
+        Poczujesz się bogato i poznasz bardziej kumatych ludzi. Zdecyduj, czy
+        wtórny, czy pierwotny rynek.
       </p>
     </section>
     <section id="sprawy-papierkowe">
@@ -64,12 +67,12 @@
       <h2>Sprawy papierkowe</h2>
       <p>Co tu będzie?</p>
       <p>
-        Najpierw deweloperem - czy to osobno? Potem umowa rezerwacji, kredytowe
-        wnioski, potem podatki,zgloszenia,wpisy do KW.
+        Najpierw z deweloperem - czy to osobno? Potem umowa rezerwacji,
+        kredytowe wnioski, potem podatki, zgłoszenia, wpisy do KW.
       </p>
       <p style="background-color: grey; padding: 14px">
-        A moze zmienic koncepcjęi zamoast na tematy podzielićna etapy? Przed
-        decyzja,w trakcie, kupno, załatwienie mediow,wykonczenie ,sasiedzi itd.
+        A moze zmienić koncepcję i zamiast na tematy podzielić na etapy? Przed
+        decyzją, w trakcie, kupno, załatwienie mediów, wykonanie, sąsiedzi itd.
       </p>
     </section>
     <section id="sprawy-projektowe">
@@ -77,12 +80,14 @@
       <h2>Sprawy projektowe</h2>
       <p>Co tu będzie?</p>
       <p>
-        Czy chxesz architekta? Nie musisz,da sie. Ale fajne sąuslugi sprawdzenia
-        projektu. Jesli masz dobregofahowaca, to mozesz bez archivutwkta. Jesli
-        nie masz dobrego fa howca,to lepiej moec architekta. Faktury, umowy itd.
+        Czy chcesz architekta? Nie musisz, da się bez. Szczególnie, gdy masz
+        chłopaka prawie architekta. Ale fajne są usługi sprawdzenia własnego
+        projektu. Jeśli masz dobrego fachowca, to możesz bez architekta. Jeśli
+        nie masz dobrego fachowca, to lepiej mieć architekta. Faktury, umowy
+        itd.
       </p>
       <p>
-        Nie trendy ,ale to jak żyjeszna co dzien. Co Cie denerwuje? Jakie masz
+        Nie trendy, ale to jak żyjesz na co dzień. Co Cię denerwuje? Jakie masz
         plany?
       </p>
     </section>
@@ -90,7 +95,7 @@
       <hr />
       <h2>Sprawy budowlane</h2>
       <p>Co tu będzie?</p>
-      <p>Chlopie, ja nie wiem</p>
+      <p>Chłopie, ja nie wiem</p>
       <ol>
         <li>najpierw to, co niezbędnedo wprowadzenia się</li>
         <ul>
