--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -90,12 +90,20 @@
         Nie trendy, ale to jak żyjesz na co dzień. Co Cię denerwuje? Jakie masz
         plany?
       </p>
+      <img src="media/kafelki.jpg" alt="" width="80%" />
+      <img src="media/panele.jpg" alt="" width="80%" />
+      <img src="media/panel1.jpg" alt="" width="80%" />
     </section>
     <section id="sprawy-budowlane">
       <hr />
       <h2>Sprawy budowlane</h2>
       <p>Co tu będzie?</p>
       <p>Chłopie, ja nie wiem</p>
+      <img
+        src="media/raport.jpg"
+        alt="Fragment raportu odbioru mieszkania z inżynierem"
+        width="80%"
+      />
       <ol>
         <li>najpierw to, co niezbędnedo wprowadzenia się</li>
         <ul>
