Some content in index.html

--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -46,16 +46,17 @@
     <p>
       Kim jestem? Mam 30 lat, od niedawna kredyt i mieszkanie. Jakie mam
       kwalifikacje, żeby doradzać w kwestiach mieszkaniowych? Żadne – poza
-      doświadczeniem z pierwszej ręki i nauką na wlasnych błędach.
+      doświadczeniem z pierwszej ręki i nauką na własnych błędach.
     </p>
+    <h3>Zanim cokolwiek</h3>
+    <p>
+        Zanim zaczniesz robić, pomyśl. Dlaczego chcesz kupic? Może lepiej
+        wynająć? Czy ogarniesz to finansowo (to, czyli gotówkę na zakup mieszkania albo kredyt)? Itd.
+      </p>
     <section id="sprawy-koncepcyjne">
       <hr />
       <h2>Sprawy koncepcyjne</h2>
       <p>Co tutaj będzie?</p>
-      <p>
-        Zanim zaczniesz robić, pomyśl. Dlaczego chcesz kupic? Może lepiej
-        wynająć? Masz kasę? Itd.
-      </p>
       <p>
         Rozeznanie dzielnic, wielkości, cen, deweloperow, idź na drzwi otwarte.
         Poczujesz się bogato i poznasz bardziej kumatych ludzi. Zdecyduj, czy
@@ -70,10 +71,14 @@
         Najpierw z deweloperem - czy to osobno? Potem umowa rezerwacji,
         kredytowe wnioski, potem podatki, zgłoszenia, wpisy do KW.
       </p>
-      <p style="background-color: grey; padding: 14px">
+
+
+      <!-- 
         A moze zmienić koncepcję i zamiast na tematy podzielić na etapy? Przed
         decyzją, w trakcie, kupno, załatwienie mediów, wykonanie, sąsiedzi itd.
-      </p>
+      -->
+
+
     </section>
     <section id="sprawy-projektowe">
       <hr />
@@ -87,7 +92,7 @@
         itd.
       </p>
       <p>
-        Nie trendy, ale to jak żyjesz na co dzień. Co Cię denerwuje? Jakie masz
+        Nie interesują Cię trendy, ale to, jak żyjesz na co dzień. Co Cię denerwuje? Jakie masz
         plany?
       </p>
       <img src="media/kafelki.jpg" alt="" width="80%" />
@@ -105,7 +110,7 @@
         width="80%"
       />
       <ol>
-        <li>najpierw to, co niezbędnedo wprowadzenia się</li>
+        <li>Najpierw to, co niezbędne do wprowadzenia się:</li>
         <ul>
           <li>ściany, podlogi, sufity</li>
           <li>instalacje (elektryka,hydraulika)</li>
@@ -114,16 +119,18 @@
           <li>materac</li>
           <li>pralka?</li>
         </ul>
-        <li>potem to, co przydatne</li>
+        <li>Potem to, co przydatne, żeby nie żyć jak na campingu:</li>
         <ul>
           <li>łóżko</li>
           <li>biuro</li>
+          <li>kanapa lub fotele do siedzenia</li>
         </ul>
-        <li>na końcu dodatki</li>
+        <li>Na końcu dodatki:</li>
         <ul>
-          <li>meble (sincerely, jebax meble)</li>
+          <li>pozostałe meble (sincerely, po co Ci one?)</li>
           <li>balkon</li>
           <li>dywany</li>
+          <li>dekoracje (patrz: pozostałe meble)</li>
         </ul>
       </ol>
     </section>
