--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -35,24 +35,37 @@
       <button><a href="#sprawy-budowlane">Sprawy budowlane</a></button>
     </nav>
     <hr />
-    <h2>Własne mieszkanie: fajne, ale nie proste</h2>
-    <p>
+    <p style="background-color: #ded5d5; padding: 12px; font-style: italic">
       Lubisz mieć dach nad głową? Jasne, to dość popularne hobby. Wszyscy chcemy
       być domni. Jeśli planujesz opuścić grono wierzących niepraktykujących i w
       końcu przenieść się na swoje - może nie być lekko. A czy warto? Jeszcze
       nie wiem, zobaczymy.
     </p>
-    <h3>O mnie</h3>
+    <h2>Kim jestem?</h2>
     <p>
-      Kim jestem? Mam 30 lat, od niedawna kredyt i mieszkanie. Jakie mam
+      <!-- sup daje dziwnie duży rozmiar fontu-->
+      Mam 30 lat, od niedawna kredyt i 59 m<sup>2</sup>. <br />Jakie mam
       kwalifikacje, żeby doradzać w kwestiach mieszkaniowych? Żadne – poza
       doświadczeniem z pierwszej ręki i nauką na własnych błędach.
     </p>
     <h3>Zanim cokolwiek</h3>
     <p>
-        Zanim zaczniesz robić, pomyśl. Dlaczego chcesz kupic? Może lepiej
-        wynająć? Czy ogarniesz to finansowo (to, czyli gotówkę na zakup mieszkania albo kredyt)? Itd.
-      </p>
+      Najpierw pomyśleć, potem robić. Nad czym warto się zastanowić 20 razy?
+    </p>
+    <ul>
+      <li>
+        Dlaczego chcę kupic mieszkanie? Czy obecnie wynajem nie jest dla mnie
+        lepszą opcją?
+      </li>
+      <li>
+        Czy chcę mieszkać w jakimś mieście/dzielnicy na stałe? Czy jednak chcę
+        jeszcze sprawdzić różne miejsca?
+      </li>
+      <li>
+        Czy ogarnę to finansowo (to, czyli albo gotówkę na zakup mieszkania,
+        albo kredyt)?
+      </li>
+    </ul>
     <section id="sprawy-koncepcyjne">
       <hr />
       <h2>Sprawy koncepcyjne</h2>
@@ -72,13 +85,10 @@
         kredytowe wnioski, potem podatki, zgłoszenia, wpisy do KW.
       </p>
 
-
       <!-- 
         A moze zmienić koncepcję i zamiast na tematy podzielić na etapy? Przed
         decyzją, w trakcie, kupno, załatwienie mediów, wykonanie, sąsiedzi itd.
       -->
-
-
     </section>
     <section id="sprawy-projektowe">
       <hr />
@@ -87,17 +97,20 @@
       <p>
         Czy chcesz architekta? Nie musisz, da się bez. Szczególnie, gdy masz
         chłopaka prawie architekta. Ale fajne są usługi sprawdzenia własnego
-        projektu. Jeśli masz dobrego fachowca, to możesz bez architekta. Jeśli
-        nie masz dobrego fachowca, to lepiej mieć architekta. Faktury, umowy
-        itd.
+        projektu. Jeśli masz dobrego fachowca, to możesz bez architekta.
+        <strong
+          >Jeśli nie masz dobrego fachowca, to lepiej mieć architekta</strong
+        >. Zbieraj faktury, podpisuj umowy itd.
       </p>
       <p>
-        Nie interesują Cię trendy, ale to, jak żyjesz na co dzień. Co Cię denerwuje? Jakie masz
-        plany?
+        Nie interesują Cię trendy, ale to, jak żyjesz na co dzień. Co Cię
+        denerwuje? Jakie masz plany?
       </p>
-      <img src="media/kafelki.jpg" alt="" width="80%" />
-      <img src="media/panele.jpg" alt="" width="80%" />
-      <img src="media/panel1.jpg" alt="" width="80%" />
+      <div>
+        <img src="media/kafelki.jpg" alt="" width="80%" />
+        <img src="media/panele.jpg" alt="" width="80%" />
+        <img src="media/panel1.jpg" alt="" width="80%" />
+      </div>
     </section>
     <section id="sprawy-budowlane">
       <hr />
