--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- paragraph font -->
+    <!-- paragraph + h1-h2 font -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     />
-    <!-- h1-h6 font -->
+    <!-- unused font -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header>
-      <h1>MieszkAnka</h1>
+      <h1 class="title">MieszkAnka</h1>
       <nav>
         <button><a href="#">Strona główna</a></button>
         <button><a href="#sprawy-koncepcyjne">Sprawy koncepcyjne</a></button>
@@ -35,40 +35,42 @@
       </nav>
       <hr />
     </header>
-    <p style="background-color: #ded5d5; padding: 12px; font-style: italic">
-      Lubisz mieć dach nad głową? Jasne, to dość popularne hobby. Wszyscy chcemy
-      być domni. Jeśli planujesz opuścić grono wierzących niepraktykujących i w
-      końcu przenieść się na swoje - może nie być lekko. A czy warto? Jeszcze
-      nie wiem, zobaczymy.
-    </p>
-    <h2>Kim jestem?</h2>
-    <p>
-      <!-- sup daje dziwnie duży rozmiar fontu-->
-      Mam 30 lat, od niedawna kredyt i 59 m<sup>2</sup>. <br />Jakie mam
-      kwalifikacje, żeby doradzać w kwestiach mieszkaniowych? Żadne – poza
-      doświadczeniem z pierwszej ręki i nauką na własnych błędach.
-    </p>
-    <h3>Zanim cokolwiek</h3>
-    <p>
-      Najpierw pomyśleć, potem robić. Nad czym warto się zastanowić 20 razy?
-    </p>
-    <ul>
-      <li>
-        Dlaczego chcę kupic mieszkanie? Czy obecnie wynajem nie jest dla mnie
-        lepszą opcją?
-      </li>
-      <li>
-        Czy chcę mieszkać w jakimś mieście/dzielnicy na stałe? Czy jednak chcę
-        jeszcze sprawdzić różne miejsca?
-      </li>
-      <li>
-        Czy ogarnę to finansowo (to, czyli albo gotówkę na zakup mieszkania,
-        albo kredyt)?
-      </li>
-    </ul>
+    <section>
+      <p style="background-color: #ded5d5; padding: 12px; font-style: italic">
+        Lubisz mieć dach nad głową? Jasne, to dość popularne hobby. Wszyscy
+        chcemy być domni. Jeśli planujesz opuścić grono wierzących
+        niepraktykujących i w końcu przenieść się na swoje - może nie być lekko.
+        A czy warto? Jeszcze nie wiem, zobaczymy.
+      </p>
+      <h1>Kim jestem?</h1>
+      <p>
+        <!-- sup daje dziwnie duży rozmiar fontu-->
+        Mam 30 lat, od niedawna kredyt i 59 m<sup>2</sup>. <br />Jakie mam
+        kwalifikacje, żeby doradzać w kwestiach mieszkaniowych? Żadne – poza
+        doświadczeniem z pierwszej ręki i nauką na własnych błędach.
+      </p>
+      <h2>Zanim cokolwiek</h2>
+      <p>
+        Najpierw pomyśleć, potem robić. Nad czym warto się zastanowić 20 razy?
+      </p>
+      <ul>
+        <li>
+          Dlaczego chcę kupic mieszkanie? Czy obecnie wynajem nie jest dla mnie
+          lepszą opcją?
+        </li>
+        <li>
+          Czy chcę mieszkać w jakimś mieście/dzielnicy na stałe? Czy jednak chcę
+          jeszcze sprawdzić różne miejsca?
+        </li>
+        <li>
+          Czy ogarnę to finansowo (to, czyli albo gotówkę na zakup mieszkania,
+          albo kredyt)?
+        </li>
+      </ul>
+    </section>
     <section id="sprawy-koncepcyjne">
       <hr />
-      <h2>Sprawy koncepcyjne</h2>
+      <h1>Sprawy koncepcyjne</h1>
       <p>Co tutaj będzie?</p>
       <p>
         Rozeznanie dzielnic, wielkości, cen, deweloperow, idź na drzwi otwarte.
@@ -78,7 +80,7 @@
     </section>
     <section id="sprawy-papierkowe">
       <hr />
-      <h2>Sprawy papierkowe</h2>
+      <h1>Sprawy papierkowe</h1>
       <p>Co tu będzie?</p>
       <p>
         Najpierw z deweloperem - czy to osobno? Potem umowa rezerwacji,
@@ -92,7 +94,7 @@
     </section>
     <section id="sprawy-projektowe">
       <hr />
-      <h2>Sprawy projektowe</h2>
+      <h1>Sprawy projektowe</h1>
       <p>Co tu będzie?</p>
       <p>
         Czy chcesz architekta? Nie musisz, da się bez. Szczególnie, gdy masz
@@ -114,7 +116,7 @@
     </section>
     <section id="sprawy-budowlane">
       <hr />
-      <h2>Sprawy budowlane</h2>
+      <h1>Sprawy budowlane</h1>
       <p>Co tu będzie?</p>
       <p>Chłopie, ja nie wiem</p>
       <img
