CSS, new content, and some notes

--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -33,7 +33,6 @@
         <button><a href="#sprawy-projektowe">Sprawy projektowe</a></button>
         <button><a href="#sprawy-budowlane">Sprawy budowlane</a></button>
       </nav>
-      <hr />
     </header>
     <section>
       <p style="background-color: #ded5d5; padding: 12px; font-style: italic">
@@ -49,6 +48,18 @@
         kwalifikacje, żeby doradzać w kwestiach mieszkaniowych? Żadne – poza
         doświadczeniem z pierwszej ręki i nauką na własnych błędach.
       </p>
+      <h2>Aktualizacje – na jakim etapie jesteśmy?</h2>
+      <p>
+        <strong>Stan na: 05-08-2025</strong><br />Mieszkanie jest już kupione,
+        kredyt się spłaca. Wykończenie w toku: mamy położone gładzie i wylewki,
+        ale panele i kafelki czekają na swoją kolej. Podobnie jak armatura do
+        łazienki i zmiękczacz wody. Najnowsze osiągnięcie to grzejnik kanałowy w
+        końcu na swoim miejscu.
+      </p>
+    </section>
+    <section id="sprawy-koncepcyjne">
+      <hr />
+      <h1>Sprawy koncepcyjne</h1>
       <h2>Zanim cokolwiek</h2>
       <p>
         Najpierw pomyśleć, potem robić. Nad czym warto się zastanowić 20 razy?
@@ -67,10 +78,6 @@
           albo kredyt)?
         </li>
       </ul>
-    </section>
-    <section id="sprawy-koncepcyjne">
-      <hr />
-      <h1>Sprawy koncepcyjne</h1>
       <p>Co tutaj będzie?</p>
       <p>
         Rozeznanie dzielnic, wielkości, cen, deweloperow, idź na drzwi otwarte.
@@ -108,10 +115,10 @@
         Nie interesują Cię trendy, ale to, jak żyjesz na co dzień. Co Cię
         denerwuje? Jakie masz plany?
       </p>
-      <div>
-        <img src="media/kafelki.jpg" alt="" width="80%" />
-        <img src="media/panele.jpg" alt="" width="80%" />
-        <img src="media/panel1.jpg" alt="" width="80%" />
+      <div class="album">
+        <img class="album-item" src="media/kafelki.jpg" alt="" />
+        <img class="album-item" src="media/panele.jpg" alt="" />
+        <img class="album-item" src="media/panel1.jpg" alt="" />
       </div>
     </section>
     <section id="sprawy-budowlane">
