class for images

--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -126,11 +126,14 @@
       <h1>Sprawy budowlane</h1>
       <p>Co tu będzie?</p>
       <p>Chłopie, ja nie wiem</p>
-      <img
-        src="media/raport.jpg"
-        alt="Fragment raportu odbioru mieszkania z inżynierem"
-        width="80%"
-      />
+      <div class="album">
+        <img
+          class="album-item"
+          src="media/raport.jpg"
+          alt="Fragment raportu odbioru mieszkania z inżynierem"
+          width="80%"
+        />
+      </div>
       <ol>
         <li>Najpierw to, co niezbędne do wprowadzenia się:</li>
         <ul>
