--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -41,58 +41,105 @@
         niepraktykujących i w końcu przenieść się na swoje - może nie być lekko.
         A czy warto? Jeszcze nie wiem, zobaczymy.
       </p>
-      <h1>Kim jestem?</h1>
-      <p>
-        <!-- sup daje dziwnie duży rozmiar fontu-->
-        Mam 30 lat, od niedawna kredyt i 59 m<sup>2</sup>. <br />Jakie mam
-        kwalifikacje, żeby doradzać w kwestiach mieszkaniowych? Żadne – poza
-        doświadczeniem z pierwszej ręki i nauką na własnych błędach.
-      </p>
-      <h2>Aktualizacje – na jakim etapie jesteśmy?</h2>
-      <p>
-        <strong>Stan na: 05-08-2025</strong><br />Mieszkanie jest już kupione,
-        kredyt się spłaca. Wykończenie w toku: mamy położone gładzie i wylewki,
-        ale panele i kafelki czekają na swoją kolej. Podobnie jak armatura do
-        łazienki i zmiękczacz wody. Najnowsze osiągnięcie to grzejnik kanałowy w
-        końcu na swoim miejscu.
-      </p>
+      <article>
+        <h1>Sprawdź, czego możesz się tu spodziewać</h1>
+        <h2>O czym jest ta strona?</h2>
+        <p>
+          Kupujemy pierwsze mieszkanie od dewelopera i świetnie się bawimy.
+          Właściwie to czasem lepiej, czasem gorzej, czasem mamy ochotę rzucić
+          czymś (albo sobą) o ścianę – ale ważne, że teraz to już nasza ściana i
+          trzeba sobie jakoś z nią poradzić. Jak? Nikt nas tego nie nauczył.
+          Więc uczymy się sami – na błędach swoich i cudzych.
+        </p>
+        <h2>Kim jestem?</h2>
+        <p>
+          <!-- sup daje dziwnie duży rozmiar fontu-->
+          Mam 30 lat, od niedawna kredyt i 59 m<sup>2</sup>. <br />Jakie mam
+          kwalifikacje, żeby doradzać w kwestiach mieszkaniowych? Żadne – poza
+          doświadczeniem z pierwszej ręki i nauką na własnych błędach.<br />Co
+          mnie skłoniło do podjęcia tego tematu publicznie? Frustracja, przede
+          wszystkim. Ale to też trochę tak jakbym zrobiła pracę domową sama, a
+          potem podzieliła się nią z innymi. Może komuś się przyda.
+        </p>
+      </article>
+      <article>
+        <h2>Aktualizacje – na jakim etapie jesteśmy?</h2>
+        <p>
+          <strong>Stan na: sierpień 2025</strong><br />Mieszkanie jest już
+          kupione, kredyt się spłaca. Wykończenie w toku: mamy położone gładzie
+          i wylewki, ale panele i kafelki czekają na swoją kolej. Podobnie jak
+          armatura do łazienki i zmiękczacz wody. Najnowsze osiągnięcie to
+          grzejnik kanałowy w końcu na swoim miejscu. Co prawda jeszcze nie
+          grzeje, ale patrzyliście na datę? Jest sierpień.
+        </p>
+      </article>
     </section>
     <section id="sprawy-koncepcyjne">
       <hr />
       <h1>Sprawy koncepcyjne</h1>
-      <h2>Zanim cokolwiek</h2>
-      <p>
-        Najpierw pomyśleć, potem robić. Nad czym warto się zastanowić 20 razy?
-      </p>
-      <ul>
-        <li>
-          Dlaczego chcę kupic mieszkanie? Czy obecnie wynajem nie jest dla mnie
-          lepszą opcją?
-        </li>
-        <li>
-          Czy chcę mieszkać w jakimś mieście/dzielnicy na stałe? Czy jednak chcę
-          jeszcze sprawdzić różne miejsca?
-        </li>
-        <li>
-          Czy ogarnę to finansowo (to, czyli albo gotówkę na zakup mieszkania,
-          albo kredyt)?
-        </li>
-      </ul>
-      <p>Co tutaj będzie?</p>
-      <p>
-        Rozeznanie dzielnic, wielkości, cen, deweloperow, idź na drzwi otwarte.
-        Poczujesz się bogato i poznasz bardziej kumatych ludzi. Zdecyduj, czy
-        wtórny, czy pierwotny rynek.
-      </p>
+      <article>
+        <h2>Zanim cokolwiek</h2>
+        <p>
+          Najpierw pomyśleć, potem robić. Nad czym warto się zastanowić 20 razy?
+        </p>
+        <ul>
+          <li>
+            Dlaczego chcę kupic mieszkanie? Czy obecnie wynajem nie jest dla
+            mnie lepszą opcją?
+          </li>
+          <li>
+            Czy chcę mieszkać w jakimś mieście/dzielnicy na stałe? Czy jednak
+            chcę jeszcze sprawdzić różne miejsca?
+          </li>
+          <li>
+            Czy ogarnę to finansowo (to, czyli albo gotówkę na zakup mieszkania,
+            albo kredyt)?
+          </li>
+          <li>
+            Jeśli masz partnerkę lub partnera: jak to zrobimy? Czy kupujemy
+            razem, czy właścicielem ma być jedna osoba? (Te kwestie dokładniej
+            ustalicie z doradcą finansowym, ale lepiej zadbać o emocjonalną
+            część tej dyskusji trochę wcześniej :)
+          </li>
+        </ul>
+      </article>
+      <article>
+        <h2>Co tu znajdziesz?</h2>
+        <p>
+          Rozeznanie dzielnic, wielkości, cen, deweloperow, idź na drzwi
+          otwarte. Poczujesz się bogato i poznasz bardziej kumatych ludzi.
+          Zdecyduj, czy wtórny, czy pierwotny rynek.
+        </p>
+      </article>
+      <article>
+        <h2>Etap spokojnego rozglądania się</h2>
+        <p>
+          Na ten etap prawdopodobnie poświęcisz najwięcej czasu – i słusznie.
+          Mieszkanie to spora inwestycja, nawet jeśli Twój stan konta jest
+          powyżej przeciętnego, dlatego dobrze go naprawdę porządnie przemyśleć
+          i dać sobie czas na ewentualne zmiany zdania. Zatem co musisz zrobić?
+        </p>
+        <h3>Rozeznanie miast i dzielnic</h3>
+        <p>
+          Moim zdaniem to pierwsze, co warto zrobić. Zanim zaczniesz szukać
+          konkretnych deweloperów, dostępnych mieszkań i ofert – zastanów się,
+          gdzie w ogóle chcesz mieszkać.</p>
+          <ul><li>Jeśli marzy Ci się zmienić miasto zamieszkania – jasne, ahoj przygodo! Ale wynajmij sobie tam pokój na miesiąc i spróbuj pożyć jak lokals. Jak działa komunikacja miejska? Czy odpowiada Ci atmosfera miasta? Czy wielkość miasta jest dla Ciebie odpowiednia, tak na co dzień? To wszystko może wyglądać zupełnie inaczej z perspektywy turysty, dlatego spróbuj pożyć chwilę jak tutejszy zanim się nim staniesz na dobre.</li>
+            <li>Jeśli decydujesz się na Twoje obecne miasto – to część drogi masz już za sobą. Zakładam, że dobrze Ci się w nim żyje, skoro chcesz tu zostać. Ale nadal do wyboru pozostaje np. dzielnica albo nawet samo osiedle. Weź pod uwagę nie tylko swoje obecne potrzeby, ale także to, co może się przydać za kilka lat (tak, mówię o lekarzach w pobliżu).</li>
+          </ul>
+        </p>
+      </article>
     </section>
     <section id="sprawy-papierkowe">
       <hr />
       <h1>Sprawy papierkowe</h1>
-      <p>Co tu będzie?</p>
-      <p>
-        Najpierw z deweloperem - czy to osobno? Potem umowa rezerwacji,
-        kredytowe wnioski, potem podatki, zgłoszenia, wpisy do KW.
-      </p>
+      <article>
+        <h2>Co tu znajdziesz?</h2>
+        <p>
+          Najpierw z deweloperem - czy to osobno? Potem umowa rezerwacji,
+          kredytowe wnioski, potem podatki, zgłoszenia, wpisy do KW.
+        </p>
+      </article>
 
       <!-- 
         A moze zmienić koncepcję i zamiast na tematy podzielić na etapy? Przed
@@ -102,62 +149,90 @@
     <section id="sprawy-projektowe">
       <hr />
       <h1>Sprawy projektowe</h1>
-      <p>Co tu będzie?</p>
-      <p>
-        Czy chcesz architekta? Nie musisz, da się bez. Szczególnie, gdy masz
-        chłopaka prawie architekta. Ale fajne są usługi sprawdzenia własnego
-        projektu. Jeśli masz dobrego fachowca, to możesz bez architekta.
-        <strong
-          >Jeśli nie masz dobrego fachowca, to lepiej mieć architekta</strong
-        >. Zbieraj faktury, podpisuj umowy itd.
-      </p>
-      <p>
-        Nie interesują Cię trendy, ale to, jak żyjesz na co dzień. Co Cię
-        denerwuje? Jakie masz plany?
-      </p>
-      <div class="album">
-        <img class="album-item" src="media/kafelki.jpg" alt="" />
-        <img class="album-item" src="media/panele.jpg" alt="" />
-        <img class="album-item" src="media/panel1.jpg" alt="" />
-      </div>
+      <article>
+        <h2>Co tu znajdziesz?</h2>
+        <p>
+          Czy chcesz architekta? Nie musisz, da się bez. Szczególnie, gdy masz
+          chłopaka prawie architekta. Ale fajne są usługi sprawdzenia własnego
+          projektu. Jeśli masz dobrego fachowca, to możesz bez architekta.
+          <strong
+            >Jeśli nie masz dobrego fachowca, to lepiej mieć architekta</strong
+          >. Zbieraj faktury, podpisuj umowy itd.
+        </p>
+        <p>
+          Nie interesują Cię trendy, ale to, jak żyjesz na co dzień. Co Cię
+          denerwuje? Jakie masz plany?
+        </p>
+        <div class="album">
+          <!-- class idzie do picture czy do img??? -->
+          <picture class="album">
+            <img
+              class="album-item"
+              src="media/kafelki.jpg"
+              alt="Kolaż płytek do łazienki. Zawiera trzy płytki: gładką antracytową, białą z delikatnym wzorem i turkusowy arkusz mozaiki w kształcie rybich łusek."
+            />
+          </picture>
+          <picture class="album">
+            <img
+              class="album-item"
+              src="media/panele.jpg"
+              alt="Kolaż paneli i płytek na podłogę. Zawiera dwa panele w jaśniejszym i ciemniejszym odcieniu drewna oraz jedną płytkę imitującą ciemne drewno."
+            />
+          </picture>
+          <picture class="album">
+            <img
+              class="album-item"
+              src="media/panel1.jpg"
+              alt="Pojedynczy panel trzymany w ręku przez mężczyznę w sklepe. Panel jest w ciepłym odcieniu jasnego drewna, z widocznymi słojami."
+            />
+          </picture>
+        </div>
+      </article>
     </section>
     <section id="sprawy-budowlane">
       <hr />
       <h1>Sprawy budowlane</h1>
-      <p>Co tu będzie?</p>
-      <p>Chłopie, ja nie wiem</p>
-      <div class="album">
-        <img
-          class="album-item"
-          src="media/raport.jpg"
-          alt="Fragment raportu odbioru mieszkania z inżynierem"
-          width="80%"
-        />
-      </div>
-      <ol>
-        <li>Najpierw to, co niezbędne do wprowadzenia się:</li>
-        <ul>
-          <li>ściany, podlogi, sufity</li>
-          <li>instalacje (elektryka,hydraulika)</li>
-          <li>kuchnia</li>
-          <li>łazienka</li>
-          <li>materac</li>
-          <li>pralka?</li>
-        </ul>
-        <li>Potem to, co przydatne, żeby nie żyć jak na campingu:</li>
-        <ul>
-          <li>łóżko</li>
-          <li>biuro</li>
-          <li>kanapa lub fotele do siedzenia</li>
-        </ul>
-        <li>Na końcu dodatki:</li>
-        <ul>
-          <li>pozostałe meble (sincerely, po co Ci one?)</li>
-          <li>balkon</li>
-          <li>dywany</li>
-          <li>dekoracje (patrz: pozostałe meble)</li>
-        </ul>
-      </ol>
+      <article>
+        <h2>Co tu znajdziesz?</h2>
+        <p>Chłopie, ja nie wiem</p>
+        <div class="album">
+          <picture class="album">
+            <img
+              class="album-item"
+              src="media/raport.jpg"
+              alt="Fragment raportu odbioru mieszkania z inżynierem. Widoczne logo firmy inspekcjadomu.pl i dwa zdjęcia wnętrza wentylacji."
+              width="80%"
+            />
+          </picture>
+        </div>
+      </article>
+      <article>
+        <h2>Kolejność wykańczania</h2>
+        <ol>
+          <li>Najpierw to, co niezbędne do wprowadzenia się:</li>
+          <ul>
+            <li>ściany, podlogi, sufity</li>
+            <li>instalacje (elektryka,hydraulika)</li>
+            <li>kuchnia</li>
+            <li>łazienka</li>
+            <li>materac</li>
+            <li>pralka?</li>
+          </ul>
+          <li>Potem to, co przydatne, żeby nie żyć jak na campingu:</li>
+          <ul>
+            <li>łóżko</li>
+            <li>biuro</li>
+            <li>kanapa lub fotele do siedzenia</li>
+          </ul>
+          <li>Na końcu dodatki:</li>
+          <ul>
+            <li>pozostałe meble (sincerely, po co Ci one?)</li>
+            <li>balkon</li>
+            <li>dywany</li>
+            <li>dekoracje (patrz: pozostałe meble)</li>
+          </ul>
+        </ol>
+      </article>
     </section>
   </body>
 </html>
