CSS do osobnego folderu

--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style/main-stylesheet.css" />
     <meta
       name="description"
       content="Poradnik, który tworzę w trakcie kupowania pierwszego mieszkania."
