--- a/current-idea/sprawy-koncepcyjne.html
+++ b/current-idea/sprawy-koncepcyjne.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-    <title>MieszkAnka</title>
+    <title>Sprawy koncepcyjne – MieszkAnka</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,7 +29,7 @@
       <nav>
         <button><a href="./index.html">Strona główna</a></button>
         <button>
-          <a href="./sprawy-koncepcyjne.html">Sprawy koncepcyjne</a>
+          <a href="#">Sprawy koncepcyjne</a>
         </button>
         <button>
           <a href="./sprawy-papierkowe.html">Sprawy papierkowe</a>
