--- a/current-idea/sprawy-papierkowe.html
+++ b/current-idea/sprawy-papierkowe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-    <title>MieszkAnka</title>
+    <title>Sprawy papierkowe – MieszkAnka</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,7 +32,7 @@
           <a href="./sprawy-koncepcyjne.html">Sprawy koncepcyjne</a>
         </button>
         <button>
-          <a href="./sprawy-papierkowe.html">Sprawy papierkowe</a>
+          <a href="#">Sprawy papierkowe</a>
         </button>
         <button>
           <a href="./sprawy-projektowe.html">Sprawy projektowe</a>
