--- a/current-idea/sprawy-projektowe.html
+++ b/current-idea/sprawy-projektowe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-    <title>MieszkAnka</title>
+    <title>Sprawy projektowe – MieszkAnka</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -35,7 +35,7 @@
           <a href="./sprawy-papierkowe.html">Sprawy papierkowe</a>
         </button>
         <button>
-          <a href="./sprawy-projektowe.html">Sprawy projektowe</a>
+          <a href="#">Sprawy projektowe</a>
         </button>
         <button><a href="./sprawy-budowlane.html">Sprawy budowlane</a></button>
       </nav>
