--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -27,7 +27,7 @@
     <header>
       <h1 class="title">MieszkAnka</h1>
       <nav>
-        <button><a href="./index.html">Strona główna</a></button>
+        <button><a href="#">Strona główna</a></button>
         <button>
           <a href="./sprawy-koncepcyjne.html">Sprawy koncepcyjne</a>
         </button>
