--- a/current-idea/sprawy-budowlane.html
+++ b/current-idea/sprawy-budowlane.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-    <title>MieszkAnka</title>
+    <title>Sprawy budowlane – MieszkAnka</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -37,7 +37,7 @@
         <button>
           <a href="./sprawy-projektowe.html">Sprawy projektowe</a>
         </button>
-        <button><a href="./sprawy-budowlane.html">Sprawy budowlane</a></button>
+        <button><a href="#">Sprawy budowlane</a></button>
       </nav>
     </header>
     <section id="sprawy-budowlane">
