drobiazgi, notatki, + namieszałam w stylesheecie

--- a/current-idea/sprawy-papierkowe.html
+++ b/current-idea/sprawy-papierkowe.html
@@ -40,8 +40,7 @@
         <button><a href="./sprawy-budowlane.html">Sprawy budowlane</a></button>
       </nav>
     </header>
-    <section id="sprawy-papierkowe">
-      <hr />
+    <section>
       <h1>Sprawy papierkowe</h1>
       <article>
         <h2>Co tu znajdziesz?</h2>
